--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="./p5/p5.min.js"></script>
     <script src="./sketch.js"></script>
     <script src="./Trympe.js"></script>
+    <script src="./Lava.js"></script>
+    <script src="./Wall.js"></script>
     <script src="./node_modules/neataptic/dist/neataptic.js"></script>
   </body>
 </html>
