--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="./Trympe.js"></script>
     <script src="./Lava.js"></script>
     <script src="./Wall.js"></script>
+    <script src="./Goal.js"></script>
+    <script src="./Spawn.js"></script>
+    <script src="./Tile.js"></script>
     <script src="./node_modules/neataptic/dist/neataptic.js"></script>
   </body>
 </html>
